# TaskManagerByKC

./: Pipfile  README.md  main.py  pyproject.toml  requirements.txt
static/: styles.css
templates/: index.html
