toml
[tool.poetry]
name = "taskmaster-app"
version = "0.1.0"
description = "TaskMaster Flask backend for task management with MySQL"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.3.3"
flask-mysqldb = "1.0.1"
flask-cors = "4.0.1"
gunicorn = "22.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
